--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h5 class="card-title">NEWSLETTER</h5>
                 <p class="card-text">Subscribe to our newsletter</p>
                 <label class="form-label">Email address</label>
-                <form action="../filters/validation.php" method="post">
+                <form action="../controller/validation.php" method="post">
                     <input type="email"  
                     size="64"
                     maxlength="64"
